Fixed bug #23004 (When ftp_close() is called, sent QUIT to the ftp server)